crates/cuda-macros/tests/compile_fail/ptx_asm_unknown_option.stderr
error: unsupported ptx_asm! option `reads_memory`; expected `register_only` or `may_diverge`
  --> tests/compile_fail/ptx_asm_unknown_option.rs:15:21
   |
15 |             options(reads_memory),
   |                     ^^^^^^^^^^^^
